Primer blogpost: La letra más usada por Cervantes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Configurations
-title: The Qubits and the Rubys
+title: j_docs
 longtitle: Blog made in jekyll about my personal learnings with Quantum Computers.
 author: Juanjo
 email: jujo.otagon@gmail.com
